Fix title overlap on bottow row of dashboard

--- a/assets/stylesheets/universalcredit.scss
+++ b/assets/stylesheets/universalcredit.scss
@@ -105,6 +105,7 @@ a, a:visited, a:hover {
   right: 0;
 }
 
+
 @media (max-width: 767px) { .more-info { font-size: 12px; } }
 
 .updated-at {
@@ -164,6 +165,7 @@ a, a:visited, a:hover {
   }
   li[data-row="3"] {
     padding-top:40px;
+    margin-top: 30px;
   }
 }
 
